--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar-end gap-5 mr-5">
             <nav class="flex gap-2 bg-[#f4f7ff] p-2 px-4 rounded-xl">
                 <img src="./assets/checkbox.png" alt="">
-                <p class="text-2xl font-bold">23</p>
+                <p id="add-number" class="text-2xl font-bold">23</p>
             </nav>
           <div class="">
             <img id="bg-color-btn" src="./assets/theme-btn.png" alt="">
@@ -39,7 +39,7 @@
                        </div>
                        <div class="my-2">
                         <p>Task Assigned</p>
-                       <p class=" text-2xl font-bold">05</p>
+                       <p id="mionus-number" class=" text-2xl font-bold">05</p>
                        </div>
                     </nav>
                 </div>
@@ -74,7 +74,7 @@
                         <p class="card-actions text-black ">Deadline <br>
                             21 March 2025</p>
                           <div class="card-actions ">
-                            <button class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
+                            <button onclick="plusMinusNumber()" class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
                           </div>
                       </nav>
                     </div>
@@ -87,7 +87,7 @@
                         <p class="card-actions text-black ">Deadline <br>
                             21 March 2025</p>
                           <div class="card-actions ">
-                            <button class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
+                            <button onclick="plusMinusNumber()" class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
                           </div>
                       </nav>
                     </div>
@@ -100,7 +100,7 @@
                         <p class="card-actions text-black ">Deadline <br>
                             21 March 2025</p>
                           <div class="card-actions ">
-                            <button class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
+                            <button onclick="plusMinusNumber()" class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
                           </div>
                       </nav>
                     </div>
@@ -113,7 +113,7 @@
                         <p class="card-actions text-black ">Deadline <br>
                             21 March 2025</p>
                           <div class="card-actions ">
-                            <button class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
+                            <button onclick="plusMinusNumber()" class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
                           </div>
                       </nav>
                     </div>
@@ -126,7 +126,7 @@
                         <p class="card-actions text-black ">Deadline <br>
                             21 March 2025</p>
                           <div class="card-actions ">
-                            <button class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
+                            <button onclick="plusMinusNumber()" class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
                           </div>
                       </nav>
                     </div>
@@ -139,7 +139,7 @@
                         <p class="card-actions text-black ">Deadline <br>
                             21 March 2025</p>
                           <div class="card-actions ">
-                            <button class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
+                            <button onclick="plusMinusNumber()" class="btn bg-[#3751fdb4] ml-2 mt-2 task-button">Completed</button>
                           </div>
                       </nav>
                     </div>
@@ -190,5 +190,7 @@
         <script src="./all-js-file/time-date.js"></script>
 
         <script src="./all-js-file/bgcolor.js"></script>
+
+        <script src="./all-js-file/add-minous.js"></script>
 </body>
 </html>
