--- a/other.html
+++ b/other.html
@@ -67,7 +67,7 @@
     const backBtn = document.getElementById('back-btn');
 
 backBtn.addEventListener('click', function (){
- window.location.href = '../index.html'
+ window.location.href = 'index.html'
 })
 </script>
 
